# codex-skills

12306-train-assistant/cache/: kyfw_12306_cookies.json  kyfw_12306_cookies.json.qrlogin.json  kyfw_12306_station_index.json
amap-jsapi-skill/: SKILL.md
china-rental-price/: .gitignore  SKILL.md  package-lock.json  package.json
china-rental-price/src/: browser.js  cache.js  cli.js  extract.js  import-onehai-session.js  login-onehai.js  onehai-policy.js  query-onehai-live-chrome.js  query.js  search.js  snapshots.js
didi-ride-skill/: SKILL.md  _meta.json  package.json
didi-ride-skill/references/: error_handling.md  setup.md  workflow.md
fliggy-travel/: SKILL.md
fliggy-travel/agents/: openai.yaml
flight-ticket-hub/: SKILL.md  _meta.json  skill.json
mcp-runtime-bridge/: SKILL.md
mcp-runtime-bridge/agents/: openai.yaml
mcp-runtime-bridge/references/: config-recipes.md  runtime-patterns.md
mcp-runtime-bridge/scripts/: audit_mcp_runtime.py
pdf-drawing-diff/: .env  .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt  test_pdf_drawing_diff_core.py  test_pdf_drawing_diff_skill.py
pdf-drawing-diff/agents/: openai.yaml
pdf-drawing-diff/scripts/: __init__.py  http_client.py  io_utils.py  ocr.py  pipeline.py  run_pdf_drawing_diff.py  vlm.py
resume-docx/: SKILL.md
resume-docx/agents/: openai.yaml
rollinggo-searchhotel/: SKILL.md  _meta.json
schematic-compare/: SKILL.md
self-improving-agent/: SKILL.md
stitch-prototype-reuse/: SKILL.md
travel-handbook-generator/: SKILL.md
travel-planning-skill/: SKILL.md
(+42 files in other folders)
